fixed faq section spacing

--- a/styles/about.css
+++ b/styles/about.css
@@ -104,9 +104,9 @@ body {
 } */
 
 .faq_quest {
-
-    margin: 0 2rem;
-    padding-bottom: 1rem;
+    padding-top: 1.5rem;
+    margin: 0 1rem 2rem;
+    padding-bottom: 0.5rem;
     border-bottom: 2px solid #fff;
     cursor: pointer;
 }
@@ -115,6 +115,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-height: 40px;
 }
 
 .question h3 {
@@ -122,7 +123,6 @@ body {
 }
 
 .answer p {
-    padding-top: 1rem;
     line-height: 1.6;
     font-size: 1.4rem;
 }
